# azcp

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile.cluster  README.md
.github/workflows/: build.yml  cluster-image.yml  runai-adapter-image.yml
crates/azcp-cluster/: Cargo.toml
crates/azcp-cluster/src/: cli.rs  filelist.rs  main.rs  paths.rs  rails.rs  timing.rs
crates/azcp-cluster/src/stages/: broadcast.rs  diff.rs  download.rs  list.rs  mod.rs  owners.rs  presence.rs  shards.rs  verify.rs
docs/: cluster-aks.md  cluster-benchmarks.md  cluster-h100-1tb-6file-sweep.md  cluster-h100-tuning.md  cluster-slurm.md  cluster-v0.4-shard-size-sweep.md  cluster-v0.4.2-throttling-sweep.md  cluster.md  handling-throttling.md  options.md  performance-tuning.md
docs/blog/2026-05-07-distributing-model-weights/: README.md  azcp-cluster-architecture.py
examples/: README.md
examples/aks/: Dockerfile.training  init-container-download-then-train.yaml  install-mpi-operator.md  mpi-operator-job.yaml  mpijob-download-then-train.yaml  statefulset-fallback.yaml
examples/runai-adapter/: Dockerfile  README.md  azcp_runai_loader.py  generate_shardlist.sh  test_load.py
examples/runai-adapter/aks/: pytorchjob.yaml
examples/runai-adapter/slurm/: TESTING.md  run.sbatch
examples/slurm/: apptainer.sbatch  azcp-cluster.sbatch  download-then-train.sbatch  enroot-import.sh
k8s/: azcp-cluster-test.yaml
scripts/: bench_throughput.sh
src/: config.rs  error.rs  lib.rs  main.rs  units.rs
src/auth/: az_cli.rs  imds.rs  mod.rs  sas.rs  shared_key.rs
src/cli/: args.rs  copy.rs  list.rs  make.rs  mod.rs  remove.rs  sync_cmd.rs
src/engine/: mod.rs  progress.rs  rate_limiter.rs
src/storage/: local.rs  location.rs  mod.rs
src/storage/blob/: client.rs  mod.rs  models.rs
tests/: AKS_TESTING.md  cluster_bench.sh  cluster_smoke.sh  sync_integration.rs
