[package]
name = "azcp"
version = "0.1.15"
edition = "2021"
description = "A Rust implementation of Azure Storage data transfer (azcopy)"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream", "blocking"] }
clap = { version = "4", features = ["derive", "env"] }
indicatif = "0.17"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
quick-xml = { version = "0.36", features = ["serialize"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2"
percent-encoding = "2"
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"
chrono = "0.4"
bytes = "1"
dirs = "6"
humansize = "2"
globset = "0.4"
md-5 = "0.10"
pprof = { version = "0.14", features = ["flamegraph"], optional = true }
mimalloc = { version = "0.1", default-features = false, optional = true }

# tikv-jemallocator only compiles on non-MSVC targets (needs cmake + C toolchain).
# Gated as a target-conditional optional dep so default-on works on linux/darwin
# and is silently skipped on Windows MSVC builds.
[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = { version = "0.6", optional = true }

[features]
default = ["jemalloc"]
profile = ["dep:pprof"]
jemalloc = ["dep:tikv-jemallocator"]
mimalloc-allocator = ["dep:mimalloc"]

[dev-dependencies]
tempfile = "3"

[profile.release]
debug = 1
